feat: creating post controller